feat: icons hbo

--- a/HBO/index.html
+++ b/HBO/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="./assets/css/Styles.css" />
   </head>
-  <body>
+  <body class="background-body">
     <!-- NavBar -->
     <nav class="menu">
         <div>
@@ -37,11 +37,21 @@
         </div>
     
     </nav>
-<div class="section-">
 
-</div>
+
+
     <header>
-
+<div>
+  <section>
+ <div class="icons">
+    <img src="./assets/images/hbo.png"/>
+    <img src="./assets/images/dc.png"/>
+    <img src="./assets/images/wb.png"/>
+    <img src="./assets/images/cartoon-network_neutral.png"/>
+    <img src="./assets/images/max_originals.png"/>
+ </div>
+</section>
+</div>
     </header>
   </body>
   <script
